[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Enemies/GenericEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/rifle.glb" type="PackedScene" id=2]
[ext_resource path="res://Assets/Bullet/PhysicalBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/gunshot.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sprites/enemy_status_shooting.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/enemy_status_moving.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/enemy_status_idle.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/enemy_status_resting.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/enemy_status_covering.png" type="Texture" id=9]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 4.0

[sub_resource type="SphereShape" id=3]
radius = 82.1819

[sub_resource type="Animation" id=4]
resource_name = "RECOIL"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 84, 15 ), Vector3( 2.20872e-08, 90, 8.53774e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.4, 1.1, 0.7 ), Vector3( 1.4, 1.1, 0.8 ) ]
}

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "1",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "3",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "4",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "0",
"speed": 5.0
} ]

[node name="GenericEnemy" type="KinematicBody" groups=["enemies"]]
script = ExtResource( 1 )
bullet = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Gun" parent="." instance=ExtResource( 2 )]
transform = Transform( -8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 1.4, 1.1, 0.7 )

[node name="Muzzle" type="Spatial" parent="Gun"]
transform = Transform( -1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0.25, 0, 5.96046e-08 )

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[node name="SightRange" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
shape = SubResource( 3 )

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="RayCast" type="RayCast" parent="Eyes"]
transform = Transform( 1.3992, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -200 )
collide_with_areas = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RECOIL = SubResource( 4 )

[node name="GunShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
pitch_scale = 0.9

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="RestTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="StatusLabel" type="AnimatedSprite3D" parent="."]
transform = Transform( -4, 0, -6.03983e-07, 0, 4, 0, 6.03983e-07, 0, -4, 0, 4, 0 )
frames = SubResource( 5 )
animation = "4"
playing = true

[connection signal="was_shot" from="." to="." method="_on_GenericEnemy_was_shot"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="RestTimer" to="." method="_on_RestTimer_timeout"]
